# particle41-devops-challenge

./: CHALLENGE.md  README.md
.github/workflows/: build-docker-image.yml
app/: .dockerignore  Cargo.toml  Dockerfile  README.md  manifest.yml  shell.nix
app/src/: config.rs  main.rs  routes.rs
kubernetes/: deployment.yml  service.yml
terraform/: .terraform.lock.hcl  README.md  eks.tf  kubernetes-manifest.yml  main.tf  shell.nix  state_init.sh  variables.tf  vpc.tf
